# pg_machida

./: .gitignore  Cargo.toml  Makefile  README.md  dev.sh  pg_machida.control
.pgrx_tmp/test_ext/: Cargo.toml  test_ext.control
.pgrx_tmp/test_ext/src/: lib.rs
.pgrx_tmp/test_ext/tests/pg_regress/sql/: setup.sql
sql/: pg_machida--0.1.0.sql
src/: book.rs  engine.rs  error.rs  lib.rs  matching.rs  persistence.rs  state.rs  types.rs
tests/: unit.rs
tests/integration/: test_sql.rs
tests/unit/: test_book.rs  test_engine.rs  test_matching.rs  test_persistence.rs  test_types.rs
web/: .gitignore  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/book/: route.ts
web/app/api/instruments/: route.ts
web/app/api/order/: route.ts
web/app/api/orders/: route.ts
web/app/api/trades/: route.ts
web/components/: InstrumentPicker.tsx  OpenOrders.tsx  OrderBook.tsx  OrderForm.tsx  TradeTape.tsx
web/lib/: db.ts  fetcher.ts  queries.ts  schema.ts  seed.ts
